    variable unifications generated as a by-product of the translation of
    grammar rules into clauses. Thanks to Ulrich Neumerkel for the bug report.

    Corrected a bug in the table of ISO Prolog specified arithmetic functions
    that is used by the Logtalk compiler when checking arithmetic expressions
    for portability (wrong arity of the bitwise complement function).

    Updated the YAP config file to workaround a bug in the built-in predicate
    absolute_file_name/3 where a directory can be returned when looking for a
    regular file.

    Removed some unused files from the "coinduction" example.


2.41.0 - September 15, 2010

    Added experimental support for coinductive predicates to the Logtalk
    compiler using a coinductive/1 directive. Requires a back-end Prolog
    compiler providing minimal support for cyclic terms (currently, YAP,
    CxProlog, ECLiPSe, SICStus Prolog, and SWI-Prolog). Thanks to Gopal
    Gupta, Neda Saeedloei, Feliks Kluzniak, Ajay Bansal, and Vitor Santos
    Costa for feedback and implementation suggestions.

    Added a "coinductive" predicate property.

    Added a "coinduction" read-only flag.

    Added a new Logtalk built-in predicate, logtalk_load_context/2, similar
    to the prolog_load_context/2 built-in predicate found in several Prolog
    compilers, in order to provide access to the compilation/loading context.
    The initial set of supported context keys is {entity_name, entity_prefix,
    entity_type, file, directory, term_position}. The term_position key is
    only supported in back-end Prolog compilers that provide the start and
    end lines of a read term.

    Simplified the Logtalk compiler by using stream aliases.

    Updated the implementation of the create_object/4 and create_category/4
    built-in predicates in order to also support the definition of an initial
    set of grammar rules.

    Corrected a bug in the runtime error handler that would result in entity