@@ -11,7 +11,7 @@
 %
 %  configuration file for SICStus Prolog 3.8 and later versions
 %
-%  last updated: August 31, 2010
+%  last updated: September 23, 2010
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -580,8 +580,9 @@ call(F, A1, A2, A3, A4, A5, A6, A7, A8) :-
 
 % '$lgt_rewrite_and_recompile_pl_directive'(@callable, -callable)
 
-'$lgt_rewrite_and_recompile_pl_directive'(ensure_loaded(File), use_module(File)) :-
-	'$lgt_pp_module_'(_).	% ensure_loaded/1 directive used within a module (sloppy replacement for the use_module/1 directive)
+'$lgt_rewrite_and_recompile_pl_directive'(ensure_loaded(File), use_module(Module, Imports)) :-
+	'$lgt_pp_module_'(_),	% ensure_loaded/1 directive used within a module (sloppy replacement for the use_module/1-2 directives)
+	'$lgt_sicstus_list_of_exports'(File, Module, Imports).
 
 '$lgt_rewrite_and_recompile_pl_directive'(module(Module, Exports, _), module(Module, Exports)).
 
