@@ -637,8 +637,9 @@ message_hook(clauses_not_together(_), _, _) :-	% YAP discontiguous predicate
 	nonvar(Encoding1),
 	'$lgt_rewrite_and_recompile_pl_encoding_directive'(Encoding1, Encoding2).
 
-'$lgt_rewrite_and_recompile_pl_directive'(ensure_loaded(File), use_module(File)) :-
-	'$lgt_pp_module_'(_).	% ensure_loaded/1 directive used within a module (sloppy replacement for the use_module/1 directive)
+'$lgt_rewrite_and_recompile_pl_directive'(ensure_loaded(File), use_module(Module, Imports)) :-
+	'$lgt_pp_module_'(_),	% ensure_loaded/1 directive used within a module (sloppy replacement for the use_module/1-2 directives)
+	'$lgt_yap_list_of_exports'(File, Module, Imports).
 
 '$lgt_rewrite_and_recompile_pl_directive'(reexport(File), reexport(Module, Exports)) :-
 	'$lgt_yap_list_of_exports'(File, Module, Exports).
@@ -646,11 +647,11 @@ message_hook(clauses_not_together(_), _, _) :-	% YAP discontiguous predicate
 '$lgt_rewrite_and_recompile_pl_directive'(reexport(File, Exports), reexport(Module, Exports)) :-
 	'$lgt_yap_list_of_exports'(File, Module, _).
 
-'$lgt_rewrite_and_recompile_pl_directive'(use_module(File, Exports), use_module(Module, Exports)) :-
+'$lgt_rewrite_and_recompile_pl_directive'(use_module(File, Imports), use_module(Module, Imports)) :-
 	'$lgt_yap_list_of_exports'(File, Module, _).
 
-'$lgt_rewrite_and_recompile_pl_directive'(use_module(File), use_module(Module, Exports)) :-
-	'$lgt_yap_list_of_exports'(File, Module, Exports).
+'$lgt_rewrite_and_recompile_pl_directive'(use_module(File), use_module(Module, Imports)) :-
+	'$lgt_yap_list_of_exports'(File, Module, Imports).
 
 
 '$lgt_yap_list_of_exports'(File, Module, Exports) :-
