@@ -28,6 +28,10 @@ RELEASE NOTES
     that is used by the Logtalk compiler when checking arithmetic expressions
     for portability (wrong arity of the bitwise complement function).
 
+    Updated the SICStus Prolog, SWI-Prolog, and YAP config files in order
+    to correct a bug in the compilation of the ensure_loaded/1 directive
+    when used within a Prolog module being compiled as an object.
+
     Updated the YAP config file to workaround a bug in the built-in predicate
     absolute_file_name/3 where a directory can be returned when looking for a
     regular file.
